--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,6 @@ pytz==2022.7.1
 Flask==2.2.2
 gunicorn==20.1.0
 MarkupSafe==2.0.1
+google-api-python-client 
+google-auth-httplib2 
+google-auth-oauthlib
